--- a/src/App.sass
+++ b/src/App.sass
@@ -1,22 +1,43 @@
+body
+  margin: 0
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+  overflow-x: hidden
+  
+// * 
+//   border: 1px solid #f00 !important
+
 #logoContainer
   margin-top: 100px
   // width: 200px
   img
-    padding: 0 3rem
     width: 100%
 
 .bluebtn
-  background-color: #128fff !important
-  color: #ffffff !important
-  transform: scale(0.75, 0.75) !important
-  opacity: 1 !important
+  // background-color: #128fff !important
+  // color: #ffffff !important
+  // transform: scale(0.75, 0.75)
+  // opacity: 1 !important
   .MuiIconButton-label
     .SearchBar-icon-120
-      opacity: 1 !important
-      color: #ffffff !important
+      // opacity: 1 !important
+      // color: #ffffff !important
 
 .SearchBar-iconButtonHidden-117
-  opacity: 0 !important
+  // opacity: 0 !important
   .MuiIconButton-label
     .SearchBar-icon-120
-      opacity: 0 !important
+      // opacity: 0 !important
+
+.mapouter
+  position: relative
+  text-align: right
+  height: 150px
+  width: 100%
+
+.gmap_canvas
+  overflow: hidden
+  background: none !important
+  height: 100%
+  width: 100%
